@@ -58,7 +58,7 @@ public class ServicesExample {
 	}
 
 	@Bean
-	public void addWebSocketDataToDB() throws JSONException, IOException, WebSocketException {
+	public void addWebSocketDataToDB() throws JSONException, IOException, WebSocketException {	
 		customWebSocket.getWebSocket("wss://ws-feed.pro.coinbase.com/", false,
 				"{\"type\": \"subscribe\", \"channels\": [{\"name\":\"matches\",\"product_ids\":[\"BTC-USD\", \"BTC-GBP\" , \"BTC-EUR\", \"ETH-GBP\" , \"ETH-USD\"  ,  \"ETH-EUR\"  , \"LTC-USD\" , \"LTC-GBP\" , \"LTC-EUR\"]}]}");
 		customWebSocket.getWebSocket("wss://ws.bitmex.com/realtime?subscribe=trade:XBTUSD", true, "");
@@ -87,7 +87,7 @@ public class ServicesExample {
 			Instant instant = Instant.parse(i.getTimestamp());
 			LocalDateTime localDateTime = LocalDateTime.ofInstant(instant, ZoneOffset.UTC);
 
-			if (Duration.between(localDateTime, minAgo).toSeconds() <= 60)
+			if (Duration.between(localDateTime, minAgo).getSeconds() <= 60)
 				previousMinList.add(i);
 		}
 
@@ -195,7 +195,6 @@ public class ServicesExample {
 	}
 
 	public HashMap<String, Object> averagePrice() {
-
 		// Id data / result
 		HashMap<String, Object> exchangeData = new HashMap<String, Object>();
 		final List<String> EXCHANGE = Arrays.asList("ALL", "COINBASE PRO".trim(), "BITMEX", "BINANCE");
@@ -225,16 +224,16 @@ public class ServicesExample {
 					for (Double l : SIZE) {
 						if (l == 0.0)
 							continue;
-						returnList.addAll(all.stream()
-								.filter(m -> !returnListObjList.contains(m.get_id()))
+						returnList.addAll(all.stream().filter(m -> !returnListObjList.contains(m.get_id()))
 								.filter(m -> m.getCypto().trim().equalsIgnoreCase(i.trim()))
 								.filter(m -> m.getExchange().trim().equalsIgnoreCase(j.trim()))
 								.filter(m -> m.getCurrency().trim().equalsIgnoreCase(k.trim()))
 								.filter(m -> Double.valueOf(m.size) < l)
 								.filter(m -> Double.valueOf(m.size) >= SIZE.get(temp))
 								.sorted(Comparator.comparing(ExchangeDataRecieved::getTimestamp1).reversed()).limit(100)
-								.toList());
-						returnListObjList = returnList.stream().map(ExchangeDataRecieved::get_id).toList();
+								.collect(Collectors.toList()));
+						returnListObjList = returnList.stream().map(ExchangeDataRecieved::get_id)
+								.collect(Collectors.toList());
 					}
 		}
 
@@ -253,31 +252,33 @@ public class ServicesExample {
 			currentDB = currentDB.stream().filter(i -> cypto != null && i.getCypto().equalsIgnoreCase(cypto))
 					.filter(i -> currency != null && i.getCurrency().equalsIgnoreCase(currency))
 					.filter(i -> i.getCurrency().equalsIgnoreCase(currency.trim()))
-					.filter(i -> exchange != null && i.getExchange().trim().equalsIgnoreCase(exchange)).toList();
+					.filter(i -> exchange != null && i.getExchange().trim().equalsIgnoreCase(exchange))
+					.collect(Collectors.toList());
 		else
-			currentDB = currentDB.stream()
-					.filter(i -> cypto != null && i.getCypto().equalsIgnoreCase(cypto))
+			currentDB = currentDB.stream().filter(i -> cypto != null && i.getCypto().equalsIgnoreCase(cypto))
 					.filter(i -> currency != null && i.getCurrency().equalsIgnoreCase(currency))
-					.filter(i -> i.getCurrency().equalsIgnoreCase(currency)).toList();
+					.filter(i -> i.getCurrency().equalsIgnoreCase(currency)).collect(Collectors.toList());
 
 		// Checks for tranactions that happened less then 1 min ago
 		List<ExchangeDataRecieved> previousMinList = currentDB.stream()
 				.filter(i -> Duration
 						.between(LocalDateTime.ofInstant(Instant.parse(i.getTimestamp()), ZoneOffset.UTC),
 								LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC).minus(1, ChronoUnit.MINUTES))
-						.toSeconds() <= 60).toList();
+						.getSeconds() <= 60)
+				.collect(Collectors.toList());
 
-		// Checks for tranactions that happened less then 60 seconds and 120 seconds ago
+		// Checks for tranaction's that happened less then 60 seconds and 120 seconds
+		// ago
 		List<ExchangeDataRecieved> afterMinList = currentDB.stream()
 				.filter(i -> Duration
 						.between(LocalDateTime.ofInstant(Instant.parse(i.getTimestamp()), ZoneOffset.UTC),
 								LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC).minus(1, ChronoUnit.MINUTES))
-						.toSeconds() >= 60)
+						.getSeconds() >= 60)
 				.filter(i -> Duration
 						.between(LocalDateTime.ofInstant(Instant.parse(i.getTimestamp()), ZoneOffset.UTC),
 								LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC).minus(1, ChronoUnit.MINUTES))
-						.toSeconds() <= 120)
-				.toList();
+						.getSeconds() <= 120)
+				.collect(Collectors.toList());
 
 		double cuurentMinPrice = previousMinList.stream().mapToDouble(i -> Double.parseDouble(i.getPrice())).sum()
 				/ previousMinList.size();
@@ -289,16 +290,26 @@ public class ServicesExample {
 		return realTimeBTCData;
 	}
 
+	// drops the db
 	public void dropData() {
-		LocalDateTime now = LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
-		List<ExchangeDataRecieved> resultToClear = bitcoinPriceData.findAll().stream().filter(
-				i -> Duration.between(LocalDateTime.ofInstant(i.getTimestamp1(), ZoneOffset.UTC), now).toMinutes() > 3)
-				.collect(Collectors.toList());
-		bitcoinPriceData.deleteAll(resultToClear);
+		try {
+			LocalDateTime now = LocalDateTime.ofInstant(Instant.now(), ZoneOffset.UTC);
+			List<ExchangeDataRecieved> resultToClear = bitcoinPriceData
+					.findAll().stream().filter(i -> Duration
+							.between(LocalDateTime.ofInstant(i.getTimestamp1(), ZoneOffset.UTC), now).getSeconds() > 180)
+					.collect(Collectors.toList());
+
+//			.map(ExchangeDataRecieved::get_id)
+			System.out.println("DROP SIZE " + resultToClear.size());
+			bitcoinPriceData.deleteAll(resultToClear);
+			System.out.println("DONE");
+		} catch (Exception e) {
+			System.out.println(e);
+		}
 	}
 
 	@Async
-	@Scheduled(fixedRate = 1000 * 125)
+	@Scheduled(fixedRate = 1000 * 60)
 	public void scheduledUpdate() throws Exception {
 		dropData();
 	}
